--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,51 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+	--pink: #e31f71;
+	--black: #212121;
+	--green: #23ce6b;
+	--blue: #016fb9;
+	scroll-padding-top: 10rem;
+}
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	transition: 0.5s;
+	font-size: 1.6rem;
+	-webkit-font-smoothing: antialiased;
+	background-color: var(--black);
+	color: #fff;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+body,
+input,
+textarea,
+button {
+	font-family: "Red Hat Display", sans-serif;
 }
-
-* {
-  box-sizing: border-box;
+html {
+	font-size: 62.5%;
+}
+main {
+	position: relative;
+	z-index: 0;
+	padding: 0 10rem;
+	overflow-x: hidden;
+}
+main #tsparticles {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+}
+@media (max-width: 740px) {
+	main {
+		padding: 0 4rem;
+	}
+}
+@media (max-width: 360px) {
+	main {
+		padding: 0 2rem;
+	}
 }
