--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,11 @@
 	--green: #23ce6b;
 	--blue: #016fb9;
 	scroll-padding-top: 10rem;
+	--text-primary: #b6b6b6;
+	--text-secondary: #ececec;
+	--bg-primary: #23232e;
+	--bg-secondary: #141418;
+	--transition-speed: 0.5s;
 }
 body {
 	transition: 0.5s;
@@ -28,8 +33,18 @@ html {
 main {
 	position: relative;
 	z-index: 0;
-	padding: 0 10rem;
+	margin-left: 8rem;
 	overflow-x: hidden;
+	padding: 0px 1rem;
+}
+body::-webkit-scrollbar {
+	width: 0.25rem;
+}
+body::-webkit-scrollbar-track {
+	background-color: #1e1e24;
+}
+body::-webkit-scrollbar-thumb {
+	background-color: rgb(25, 102, 25);
 }
 main #tsparticles {
 	position: absolute;
@@ -39,8 +54,9 @@ main #tsparticles {
 	height: 100%;
 	z-index: -1;
 }
-@media (max-width: 740px) {
+@media (max-width: 600px) {
 	main {
+		margin: 0;
 		padding: 0 4rem;
 	}
 }
@@ -48,4 +64,19 @@ main #tsparticles {
 	main {
 		padding: 0 2rem;
 	}
+}
+.fa-primary {
+	color: #ff7eee;
+}
+
+.fa-secondary {
+	color: #df49a6;
+}
+
+.fa-primary,
+.fa-secondary {
+	transition: var(--transition-speed);
+}
+.theme_icon {
+	display: none;
 }
