added emailjs and redirects for github and stackoverflow

--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -44,6 +44,9 @@
 	background: var(--bg-secondary);
 	color: var(--text-secondary);
 }
+.nav_link:hover svg {
+	color: #df49a6;
+}
 
 .link_text {
 	display: none;
