--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -1,20 +1,21 @@
 section.projects h2 {
 	text-align: center;
-	font-size: 4rem;
-	margin-bottom: 5rem;
+	font-size: 40px;
+	margin-bottom: 10px;
 }
 section.projects .projects_container {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-template-rows: auto;
-	gap: 2rem;
-	padding: 1rem;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-evenly;
+	gap: 80px;
+	padding: 10px;
+	padding-block: 100px;
 	overflow: hidden;
 }
 section.projects .projects_container .project {
-	padding: 2rem 1.8rem;
+	padding: 20px 18px;
 	background-color: #2b2b2b;
-	border-radius: 1.2rem;
+	border-radius: 12px;
 	transition: 0.25s;
 	display: flex;
 	flex-direction: column;
@@ -30,25 +31,25 @@ section.projects .projects_container .project header {
 	align-items: center;
 	justify-content: space-between;
 	color: var(--blue);
-	margin-bottom: 3.6rem;
+	margin-bottom: 36px;
 }
 section.projects .projects_container .project header .project_links {
 	display: flex;
 	align-items: center;
-	gap: 1rem;
+	gap: 10px;
 }
 section.projects .projects_container .project header a > img {
-	width: 2.6rem;
+	width: 26px;
 }
 section.projects .projects_container .project h3 {
-	margin-bottom: 2rem;
+	margin-bottom: 20px;
 }
 section.projects .projects_container .project p {
-	letter-spacing: 0.12rem;
-	margin-bottom: 2rem;
+	letter-spacing: 1.2px;
+	margin-bottom: 20px;
 }
 section.projects .projects_container .project p a {
-	color: #fff f;
+	color: #fff;
 	border-bottom: 1px solid var(--green);
 	transition: color 0.25s;
 }
@@ -61,8 +62,8 @@ section.projects .projects_container .project footer {
 section.projects .projects_container .project footer .tech_list {
 	display: flex;
 	align-items: center;
-	gap: 2rem;
-	font-size: 1.4rem;
+	gap: 20px;
+	font-size: 14px;
 	opacity: 0.6;
 }
 @media (max-width: 960px) {
@@ -73,5 +74,167 @@ section.projects .projects_container .project footer .tech_list {
 @media (max-width: 740px) {
 	section.projects .projects_container {
 		grid-template-columns: 1fr;
+	}
+}
+.btn {
+	cursor: pointer;
+	border: 0;
+	background-color: var(--clr-secondary);
+	border-radius: 100vw;
+	color: var(--clr-light);
+	padding: 0.5em 1.5em;
+	font-weight: bold;
+	font-size: 1.2rem;
+}
+.card {
+	position: relative;
+	cursor: pointer;
+	font-size: 2rem;
+	z-index: 100;
+}
+.rank {
+	font-weight: bold;
+	position: absolute;
+	top: 0;
+	right: 25px;
+	z-index: 10;
+	background-color: rgba(0, 0, 0, 0.65);
+	padding: 10px;
+	clip-path: polygon(100% 0, 100% 100%, 50% 85%, 0 100%, 0 0);
+	font-size: 20px;
+	transition: var(--transition);
+}
+.streamers {
+	display: flex;
+	text-align: center;
+}
+.streamers img {
+	width: 2em;
+	height: 2em;
+	border-radius: 50%;
+}
+.streamers .icon img {
+	border-radius: 0;
+}
+.front {
+	transition: ease-in-out 250ms;
+}
+.front .thumbnail {
+	border-radius: var(--br);
+	margin-inline: auto;
+	z-index: 1000;
+}
+.front .name {
+	margin: 0.75em 0;
+	font-size: 1.8rem;
+}
+.front .links {
+	display: none;
+	justify-content: space-evenly;
+	margin-top: 1rem;
+}
+.front .links a:hover svg {
+	color: #df49a6;
+}
+.front .viewers {
+	font-size: 1rem;
+}
+.front .stats {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.back {
+	opacity: 0;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 49%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 0.6em;
+	transform: translateY(35%);
+	transition: transform 200ms ease, opacity 100ms;
+}
+.back .streaming_info {
+	margin-top: 1.5rem;
+}
+.back .game_stat {
+	font-size: 1.125rem;
+	text-align: center;
+	display: -webkit-box;
+	-webkit-line-clamp: 4;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+}
+.back .game_stat span {
+	display: block;
+	font-size: 0.85rem;
+}
+.background {
+	background-color: #282e36;
+	position: absolute;
+	inset: 0;
+	z-index: -1;
+	transform: scale(0.2 0.9);
+	border-radius: var(--br);
+	opacity: 0;
+}
+.card:hover .rank {
+	transform: translate(150%, -20%);
+}
+.card:hover .front {
+	transform: translateY(-30%) scale(0.8);
+}
+.card:hover .front .name {
+	display: none;
+	animation: gameName 250ms forwards;
+}
+.card:hover .front .links {
+	display: flex;
+	columns: 2;
+	column-gap: 10px;
+}
+.card:hover .stats {
+	opacity: 0;
+}
+.card:hover .back {
+	opacity: 1;
+	transform: translateY(0);
+	transition: transform 200ms ease, opacity 100ms linear;
+}
+.card:hover .back .streamers {
+	width: 100%;
+	justify-content: space-between;
+}
+.card:hover .back .streamer {
+	font-size: 0.9rem;
+}
+.card:hover .back .streamer .name {
+	font-weight: bold;
+}
+.card:hover .background {
+	transition: var(--transition), opacity 100ms linear;
+	opacity: 1;
+	transform: scale(1.25, 1.15) translateY(5%);
+}
+@keyframes gameName {
+	0% {
+		text-align: left;
+		opacity: 1;
+	}
+	20% {
+		text-align: left;
+		opacity: 0;
+	}
+	50% {
+		text-align: center;
+		opacity: 0;
+		transform: scale(1.2);
+	}
+	100% {
+		text-align: center;
+		opacity: 1;
 	}
 }
