--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -5,7 +5,7 @@
 	overflow: scroll;
 	overflow: hidden;
 	z-index: 10;
-	font-size: 2rem;
+	font-size: 20px;
 }
 
 .navbar_nav {
@@ -32,10 +32,10 @@
 	height: auto;
 	color: var(--text-primary);
 	text-decoration: none;
-	padding-block: 3rem;
+	padding-block: 20px;
 	filter: grayscale(100%) opacity(0.7);
 	transition: var(--transition-speed);
-	font-size: 2.1rem;
+	font-size: 21px;
 	width: 100%;
 }
 
@@ -50,20 +50,20 @@
 
 .link_text {
 	display: none;
-	margin-left: 1rem;
+	margin-left: 10px;
 }
 
 .nav_link svg {
-	width: 2rem;
-	min-width: 3rem;
-	margin: 0 1.5rem;
+	width: 20px;
+	min-width: 30px;
+	margin: 0 15px;
 }
 
 .logo {
-	margin-bottom: 1rem;
+	margin-bottom: 10px;
 	background: var(--bg-secondary);
 	width: 100%;
-	font-size: 3rem;
+	font-size: 30px;
 	color: #fff;
 }
 
@@ -77,7 +77,7 @@
 	position: absolute;
 	left: -999px;
 	transition: var(--transition-speed);
-	font-size: 3rem;
+	font-size: 30px;
 }
 .logo_text::first-letter {
 	color: var(--green);
@@ -92,7 +92,7 @@
 	.navbar {
 		bottom: 0;
 		width: 100vw;
-		height: 5rem;
+		height: 50px;
 	}
 
 	.logo {
@@ -107,7 +107,7 @@
 		justify-content: center;
 	}
 	button.nav_link {
-		padding-top: 1rem;
+		padding-top: 10px;
 	}
 }
 
@@ -115,12 +115,12 @@
 @media only screen and (min-width: 600px) {
 	.navbar {
 		top: 0;
-		width: 7rem;
+		width: 70px;
 		height: 100vh;
 	}
 
 	.navbar:hover {
-		width: 24rem;
+		width: 240px;
 	}
 
 	.navbar:hover .link_text {
@@ -128,7 +128,7 @@
 	}
 
 	.navbar:hover .logo svg {
-		margin-left: 18rem;
+		margin-left: 180px;
 	}
 
 	.navbar:hover .logo_text {
