--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,10 +13,15 @@
 	--bg-primary: #23232e;
 	--bg-secondary: #141418;
 	--transition-speed: 0.5s;
+	--clr-dark: rgb(13, 17, 19);
+	--clr-light: rgb(255, 255, 255);
+	--clr-secondary: rgb(0, 66, 199);
+	--br: 0.5em;
+	--transition: transform 200ms cubic-bezier(0.21, 1.06, 0.81, 1);
 }
 body {
 	transition: 0.5s;
-	font-size: 1.6rem;
+	font-size: 1rem;
 	-webkit-font-smoothing: antialiased;
 	background-color: var(--black);
 	color: #fff;
@@ -27,9 +32,6 @@ input,
 textarea,
 button {
 	font-family: "Red Hat Display", sans-serif;
-}
-html {
-	font-size: 62.5%;
 }
 main {
 	position: relative;
@@ -49,7 +51,6 @@ body::-webkit-scrollbar-thumb {
 }
 section {
 	margin-top: 100px;
-	overflow-x: hidden;
 }
 main #tsparticles {
 	position: absolute;
