--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,5 +1,5 @@
 footer.footer {
-	background-color: #2b2b2b;
+	background-color: var(--bg-primary);
 	padding: 30px 150px;
 	margin-top: 50px;
 	display: flex;
@@ -8,7 +8,7 @@ footer.footer {
 }
 footer.footer .logo {
 	font-size: 28px;
-	color: #fff;
+	color: var(--text-primary);
 }
 footer.footer .logo::first-letter {
 	color: var(--green);
