--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -14,7 +14,7 @@ section.projects .projects_container {
 }
 section.projects .projects_container .project {
 	padding: 20px 18px;
-	background-color: #2b2b2b;
+	background-color: var(--bg-primary);
 	border-radius: 12px;
 	transition: 0.25s;
 	display: flex;
@@ -98,7 +98,7 @@ section.projects .projects_container .project footer .tech_list {
 	top: 0;
 	right: 25px;
 	z-index: 10;
-	background-color: rgba(0, 0, 0, 0.65);
+	background-color: var(--card-rank);
 	padding: 10px;
 	clip-path: polygon(100% 0, 100% 100%, 50% 85%, 0 100%, 0 0);
 	font-size: 20px;
@@ -173,7 +173,7 @@ section.projects .projects_container .project footer .tech_list {
 	font-size: 0.85rem;
 }
 .background {
-	background-color: #282e36;
+	background-color: var(--card-background);
 	position: absolute;
 	inset: 0;
 	z-index: -1;
@@ -182,7 +182,7 @@ section.projects .projects_container .project footer .tech_list {
 	opacity: 0;
 }
 .card:hover .rank {
-	transform: translate(150%, -20%);
+	transform: translate(120%, -17%);
 }
 .card:hover .front {
 	transform: translateY(-30%) scale(0.8);
