--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -96,8 +96,7 @@ section.projects .projects_container .project footer .tech_list {
 	position: relative;
 	cursor: pointer;
 	font-size: 2rem;
-	z-index: 100;
-	max-width: 250px;
+	width: 250px;
 }
 .rank {
 	font-weight: bold;
@@ -109,6 +108,7 @@ section.projects .projects_container .project footer .tech_list {
 	padding: 10px;
 	clip-path: polygon(100% 0, 100% 100%, 50% 85%, 0 100%, 0 0);
 	font-size: 20px;
+	z-index: 100;
 	transition: var(--transition);
 }
 .streamers {
@@ -125,11 +125,13 @@ section.projects .projects_container .project footer .tech_list {
 }
 .front {
 	transition: ease-in-out 250ms;
+	display: flex;
+	flex-direction: column;
 }
 .front .thumbnail {
 	border-radius: var(--br);
 	margin-inline: auto;
-	z-index: 1000;
+	z-index: 50;
 }
 .front .name {
 	margin: 0.75em 0;
@@ -149,7 +151,8 @@ section.projects .projects_container .project footer .tech_list {
 	transform: scale(1.2);
 }
 .front .viewers {
-	font-size: 1rem;
+	font-size: 1.2rem;
+	font-weight: 800;
 }
 .front .stats {
 	display: flex;
@@ -162,6 +165,7 @@ section.projects .projects_container .project footer .tech_list {
 	left: 0;
 	right: 0;
 	top: 49%;
+
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -192,6 +196,7 @@ section.projects .projects_container .project footer .tech_list {
 	transform: scale(0.2 0.9);
 	border-radius: var(--br);
 	opacity: 0;
+	min-height: 350px;
 }
 .card:hover .rank {
 	transform: translate(120%, -17%);
