--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,14 +5,13 @@
 
 :root {
 	--transition-speed: 0.5s;
-	scroll-padding-top: 10rem;
+	scroll-padding-top: 50px;
 	--transition: transform 200ms cubic-bezier(0.21, 1.06, 0.81, 1);
 	--br: 0.5em;
 	--pink: #e31f71;
 	--black: #212121;
 	--green: #23ce6b;
 	--blue: #016fb9;
-	--clr-dark: rgb(13, 17, 19);
 	--clr-light: rgb(255, 255, 255);
 	--clr-secondary: rgb(0, 66, 199);
 }
