--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,6 +1,7 @@
 footer.footer {
 	background-color: var(--bg-primary);
 	padding: 30px 150px;
+	height: 100px;
 	margin-top: 50px;
 	display: flex;
 	align-items: center;
