--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -7,6 +7,16 @@ footer.footer {
 	align-items: center;
 	justify-content: space-between;
 }
+@media screen and (max-width: 1000px) {
+	footer.footer {
+		height: 190px;
+	}
+}
+@media screen and (max-width: 600px) {
+	footer.footer {
+		margin-bottom: 100px;
+	}
+}
 footer.footer .logo {
 	font-size: 28px;
 	color: var(--text-primary);
