--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -7,7 +7,7 @@ section.projects .projects_container {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-evenly;
-	gap: 80px;
+	gap: 100px 80px;
 	padding: 10px;
 	padding-block: 100px;
 	overflow: hidden;
