--- a/styles/ProjectSlug.module.css
+++ b/styles/ProjectSlug.module.css
@@ -1,11 +1,14 @@
 .project {
 	margin-top: 0;
-	width: 80%;
+	width: 85%;
 	margin-inline: auto;
 	overflow: hidden;
-	height: calc(100vh - 150px);
+	min-height: calc(100vh - 150px);
 }
 @media screen and (max-width: 600px) {
+	.project {
+		width: 100%;
+	}
 }
 @media screen and (max-width: 1000px) {
 	.project {
@@ -43,4 +46,34 @@
 .markdown p {
 	line-height: 25px;
 	font-size: 1rem;
+}
+.image_container {
+	width: 100%;
+	height: 600px;
+	scroll-snap-type: x mandatory;
+	-webkit-overflow-scrolling: touch; /* Needed to work on iOS Safari */
+	overflow: hidden;
+	overflow-x: scroll;
+	display: flex;
+	scrollbar-color: var(--font-color-link) #1e1e24;
+	scrollbar-width: thin;
+}
+.image_container figure {
+	scroll-snap-align: start;
+	display: flex;
+	flex: none;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+.image_container::-webkit-scrollbar {
+	width: 0.25rem;
+}
+.image_container::-webkit-scrollbar-track {
+	background-color: #1e1e24;
+}
+.image_container::-webkit-scrollbar-thumb {
+	background-color: var(--font-color-link);
 }
