--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,7 +88,7 @@ main #tsparticles {
 @media (max-width: 600px) {
 	main {
 		margin: 0;
-		padding: 0;
+		padding: 0 1rem;
 	}
 	.not-found {
 		height: calc(100vh - 288px);
