--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,11 +1,43 @@
-section.contact header {
-	text-align: center;
+section.contact {
+	padding-top: 150px;
 }
-section.contact header h2 {
-	text-align: center;
-	font-size: 40px;
+section.contact::before {
+	content: "Contact";
+	position: absolute;
+	font-size: 24vw;
+	letter-spacing: -25px;
+	top: -4rem;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	font-weight: 800;
+	color: var(--bg-primary);
+	text-shadow: -1px 0 var(--bg-primary), 0 1px var(--bg-primary), 1px 0 var(--bg-primary), 0 -1px var(--bg-primary);
+	opacity: 0.5;
+	z-index: -1;
 }
-section.contact header p {
+@media (max-width: 740px) {
+	section.contact::before {
+		font-size: 25vw;
+		letter-spacing: -5px;
+		top: 4rem;
+	}
+}
+
+@media (max-width: 1000px) {
+	section.contact {
+		padding-top: 0px;
+	}
+	section.contact::before {
+		font-size: 20vw;
+		letter-spacing: -5px;
+		top: -1rem;
+	}
+}
+
+section.contact p {
+	margin-top: 50px;
+	text-align: center;
 	color: var(--green);
 	font-weight: 500;
 }
@@ -44,7 +76,7 @@ section.contact .contacts .contact_info:hover a {
 }
 
 section.contact .form {
-	margin-top: 100px;
+	margin-top: 80px;
 	display: grid;
 	place-items: center;
 }
