--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -10,7 +10,7 @@ section.about::before {
 	font-size: 28vw;
 	letter-spacing: -25px;
 	top: -4rem;
-	left: 0;
+	left: -3rem;
 	width: 100%;
 	height: 100%;
 	font-weight: 800;
@@ -34,6 +34,7 @@ section.about::before {
 		padding-top: 100px;
 	}
 	section.about::before {
+		left: 0;
 		font-size: 25vw;
 		letter-spacing: -5px;
 		top: 1rem;
