--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -12,7 +12,7 @@ section.projects::before {
 	font-size: 23vw;
 	letter-spacing: -25px;
 	top: -6rem;
-	left: 0;
+	left: -3rem;
 	width: 100%;
 	height: 100%;
 	font-weight: 800;
@@ -36,6 +36,7 @@ section.projects::before {
 		padding-top: 100px;
 	}
 	section.about::before {
+		left: 0;
 		font-size: 25vw;
 		letter-spacing: -5px;
 		top: 1rem;
