--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,6 +44,9 @@ div.body {
 body {
 	transition: 0.5s;
 	font-size: 1rem;
+	-webkit-font-smoothing: antialiased;
+	scrollbar-width: thin;
+	scrollbar-color: var(--font-color-link) #1e1e24;
 }
 .not-found {
 	height: calc(100vh - 150px);
@@ -59,28 +62,20 @@ main {
 	z-index: 0;
 	margin-left: 5rem;
 	padding: 0px 1rem;
-	scroll-snap-type: y mandatory;
-	-webkit-overflow-scrolling: touch; /* Needed to work on iOS Safari */
-	overflow-y: scroll;
-	-webkit-font-smoothing: antialiased;
-	scrollbar-width: thin;
-	scrollbar-color: var(--font-color-link) #1e1e24;
 }
-main::-webkit-scrollbar {
+body::-webkit-scrollbar {
 	width: 0.25rem;
 }
-main::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
 	background-color: #1e1e24;
 }
-main::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
 	background-color: var(--font-color-link);
 }
 section {
 	margin-top: 100px;
 	min-height: calc(100vh - 250px);
 	position: relative;
-	min-height: 100vh;
-	scroll-snap-align: start;
 }
 .body #tsparticles {
 	position: absolute;
@@ -88,7 +83,7 @@ section {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	z-index: -1;
+	z-index: 0;
 }
 @media (max-width: 600px) {
 	main {
