--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -1,6 +1,15 @@
 section.contact {
 	padding-top: 150px;
 }
+section.contact header {
+	text-align: center;
+}
+section.contact header h2 {
+	text-align: center;
+	font-size: 40px;
+	margin-bottom: 20px;
+	border-bottom: 2px solid var(--blue);
+}
 section.contact::before {
 	content: "Contact";
 	position: absolute;
@@ -30,12 +39,10 @@ section.contact::before {
 }
 @media (max-width: 740px) {
 	section.contact {
-		padding-top: 10px;
+		padding-top: 0;
 	}
 	section.contact::before {
-		font-size: 23vw;
-		letter-spacing: -5px;
-		top: 0;
+		content: none;
 	}
 }
 
