--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -8,7 +8,7 @@ section.contact header h2 {
 	text-align: center;
 	font-size: 40px;
 	margin-bottom: 20px;
-	border-bottom: 2px solid var(--blue);
+	border-bottom: 2px solid var(--icon-color-matrix);
 }
 section.contact::before {
 	content: "Contact";
@@ -49,7 +49,7 @@ section.contact::before {
 section.contact p {
 	margin-top: 50px;
 	text-align: center;
-	color: var(--green);
+	color: var(--icon-color-matrix);
 	font-weight: 500;
 }
 section.contact .contacts {
@@ -67,7 +67,7 @@ section.contact .contacts .contact_info {
 	width: 50%;
 	max-width: 400px;
 	gap: 20px;
-	background-color: var(--green);
+	background-color: var(--icon-color-matrix);
 	border-radius: 14px;
 	padding: 16px 28px;
 	transition: background-color 0.25s;
@@ -128,7 +128,7 @@ section.contact .form form button {
 	text-transform: uppercase;
 	border: none;
 	cursor: pointer;
-	background-color: var(--green);
+	background-color: var(--icon-color-matrix);
 	color: var(--bg-secondary);
 	border-radius: 20px;
 	font-weight: 500;
