--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -13,7 +13,7 @@ section.hero .hero_text h1 {
 	font-size: 70px;
 }
 section.hero .hero_text h3 {
-	color: var(--green);
+	color: var(--icon-color-matrix);
 	margin: 1rem 0;
 }
 section.hero .hero_text p.small_resume {
@@ -24,7 +24,7 @@ section.hero .button {
 	padding: 1.4rem 6rem;
 	border: none;
 	cursor: pointer;
-	background-color: var(--green);
+	background-color: var(--icon-color-matrix);
 	color: #fff;
 	border-radius: 2rem;
 	font-weight: 500;
